--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -12,20 +12,22 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.005">
 
-        <TextView
-            android:id="@+id/search_text"
+        <EditText
+            android:id="@+id/search_filter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:drawableRight="@android:drawable/ic_menu_search"
-            android:gravity="center"
-            android:hint="Search..." />
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="" />
 
         <Spinner
             android:id="@+id/search_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:entries="@array/select_search_tracks" />
+
     </LinearLayout>
 
     <Button
@@ -35,9 +37,51 @@
         android:layout_weight="0.05"
         android:text="Search" />
 
+    <LinearLayout
+        android:id="@+id/create_tracklist_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.005"
+        android:orientation="vertical"
+        tools:visibility="invisible">
+
+        <TextView
+            android:id="@+id/search_tracklist_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.005"
+            android:text="Create a Tracklist for this search."
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/search_tracklist_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.005"
+            android:text="Name:"
+            android:textSize="14sp" />
+
+        <EditText
+            android:id="@+id/search_tracklist_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/search_create_tracklist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.05"
+            android:text="Create" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/search_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.7" />
+        android:layout_weight="0.7">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
