--- a/app/src/main/res/layout/track.xml
+++ b/app/src/main/res/layout/track.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:text="Artist, Album"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -26,11 +26,11 @@
         android:layout_marginLeft="12dp"
         android:layout_marginTop="8dp"
         android:text="Title"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/track_artist_album" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/image"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
