--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,17 @@
         android:id="@+id/nav_home"
         android:name="com.example.soundroid.ui.player.PlayerFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home"/>
+        tools:layout="@layout/fragment_player"/>
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.soundroid.ui.gallery.GalleryFragment"
+        android:name="com.example.soundroid.ui.research.ResearchFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_research" />
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.soundroid.ui.slideshow.SlideshowFragment"
+        android:name="com.example.soundroid.ui.playlists.PlaylistFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_playlist" />
 </navigation>
