--- a/app/src/main/res/layout/fragment_playlist.xml
+++ b/app/src/main/res/layout/fragment_playlist.xml
@@ -8,9 +8,10 @@
     tools:context=".ui.playlists.PlaylistFragment" >
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.8" >
+        android:layout_weight="0.8">
 
     </androidx.recyclerview.widget.RecyclerView>
 
