--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/import_bdd"
+        android:icon="@drawable/ic_import_bdd"
+        android:title="Import"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/export_bdd"
+        android:icon="@drawable/ic_export_bdd"
+        android:title="Export"
+        app:showAsAction="always" />
 </menu>
