--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,9 @@
         android:name="com.example.soundroid.ui.playlists.PlaylistFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_playlist" />
+    <fragment
+        android:id="@+id/nav_history"
+        android:name="com.example.soundroid.ui.history.HistoryFragment"
+        android:label="History"
+        tools:layout="@layout/fragment_history" />
 </navigation>
